RESOLVED FIXED205959
CSSTransition is missing default initialization for m_currentStyle
https://bugs.webkit.org/show_bug.cgi?id=205959
Summary CSSTransition is missing default initialization for m_currentStyle
Sunny He
Reported 2020-01-08 14:34:40 PST
rdar://57073673 This causes occasional null-pointer crashes when currentStyle() gets called on the CSSTransition before resolve.
Attachments
Patch (6.02 KB, patch)
2020-01-08 14:49 PST, Sunny He
no flags
Patch (6.06 KB, patch)
2020-01-31 13:35 PST, Sunny He
no flags
Patch (6.06 KB, patch)
2020-01-31 16:07 PST, Sunny He
no flags
Sunny He
Comment 1 2020-01-08 14:49:00 PST
Sunny He
Comment 2 2020-01-31 13:35:22 PST
Sunny He
Comment 3 2020-01-31 16:07:23 PST
WebKit Commit Bot
Comment 4 2020-02-12 00:39:55 PST
Comment on attachment 389436 [details] Patch Clearing flags on attachment: 389436 Committed r256427: <https://trac.webkit.org/changeset/256427>
WebKit Commit Bot
Comment 5 2020-02-12 00:39:57 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.