Fix crash due to uninitialized currentStyle in CSSTransition https://bugs.webkit.org/show_bug.cgi?id=205959 <rdar://57073673>

Patch by Sunny He <sunny_he@apple.com> on 2020-02-12
Reviewed by Antoine Quint.

Source/WebCore:

Test: legacy-animation-engine/transitions/svg-bad-scale-crash.html

* animation/CSSTransition.cpp:
(WebCore::CSSTransition::create):
(WebCore::CSSTransition::CSSTransition):
* animation/CSSTransition.h:

LayoutTests:

Fix crash due to uninitialized currentStyle in CSSTransition

* legacy-animation-engine/transitions/svg-bad-scale-crash-expected.txt: Added.
* legacy-animation-engine/transitions/svg-bad-scale-crash.html: Added.

Canonical link: https://commits.webkit.org/220586@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256427 268f45cc-cd09-0410-ab3c-d52691b4dbfc